crates/glyph-cli/tests/corpus/invalid/flow_assign_redecl_const.glyph
const ctx = "preserved"

block inspect_repo(scope = ".") -> Report
    description: "Inspect the repo."
    flow:
        "Examine {scope}."
        return context

skill diagnose(scope = ".") -> Report
    description: "Binding name collides with a const."
    flow:
        ctx = inspect_repo(scope)
        return ctx
